--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,21 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".fragments.HomeFragment">
 
+    <Button
+        android:id="@+id/tempButton1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Open Karakia 5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+    <Button
+        android:id="@+id/tempButton2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Open Karakia -1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tempButton1" />
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:text="This is a tempory layout for testing purposes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <VideoView
-        android:id="@+id/player"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:weightSum="1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView2" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
