--- a/app/src/main/res/layout/fragment_karakia.xml
+++ b/app/src/main/res/layout/fragment_karakia.xml
@@ -51,7 +51,8 @@
             <TextView
                 android:id="@+id/text_karakiaWords"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:padding="10dp" />
         </LinearLayout>
     </ScrollView>
 
