--- a/app/src/main/res/navigation/navgraph.xml
+++ b/app/src/main/res/navigation/navgraph.xml
@@ -16,6 +16,15 @@
         <action
             android:id="@+id/action_HomeFragment_to_TOSFragment"
             app:destination="@id/TOSFragment" />
+        <action
+            android:id="@+id/action_HomeFragment_to_settingsFragment"
+            app:destination="@id/SettingsFragment" />
+        <action
+            android:id="@+id/action_HomeFragment_to_searchFragment"
+            app:destination="@id/SearchFragment" />
+        <action
+            android:id="@+id/action_HomeFragment_to_AboutFragment"
+            app:destination="@id/AboutFragment" />
     </fragment>
     <fragment
         android:id="@+id/KarakiaFragment"
@@ -31,4 +40,27 @@
         android:name="com.group3.karakiaapp.fragments.TOSFragment"
         android:label="@string/fragment_name_tos"
         tools:layout="@layout/fragment_tos" />
+    <fragment
+        android:id="@+id/SettingsFragment"
+        android:name="com.group3.karakiaapp.fragments.SettingsFragment"
+        android:label="@string/fragment_name_settings"
+        tools:layout="@layout/fragment_settings">
+        <action
+            android:id="@+id/action_settingsFragment_to_TOSFragment"
+            app:destination="@id/TOSFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/SearchFragment"
+        android:name="com.group3.karakiaapp.fragments.SearchFragment"
+        android:label="@string/fragment_name_search"
+        tools:layout="@layout/fragment_search">
+        <action
+            android:id="@+id/action_searchFragment_to_KarakiaFragment"
+            app:destination="@id/KarakiaFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/AboutFragment"
+        android:name="com.group3.karakiaapp.fragments.AboutFragment"
+        android:label="@string/fragment_name_about"
+        tools:layout="@layout/fragment_about" />
 </navigation>
