--- a/app/src/main/res/xml/karakias.xml
+++ b/app/src/main/res/xml/karakias.xml
@@ -1,35 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <karakia id="-1" name="No Song Selected" video="music_2" audio="" image="">
+    <karakia id="0" name="No Song Selected" video="music_2" audio="" image="test_image">
+        <!--- This is the default object that will be loaded if the selected karakia doesn't exist.
+            Hopefully the users will never see this object !-->
         <words lang="english">This is just the default page.
 This section is where the song's words would be displayed</words>
         <words lang="maori">Koinei anake te wharangi taunoa.
 Ko tenei wahanga ka whakaatuhia nga kupu o te waiata</words>
         <origins>This is where you would go to see the songs origins</origins>
     </karakia>
-    <karakia id="5" name="test" video="music_1" audio="" image="">
+    <karakia id="1" name="test" video="music_1" audio="" image="test_image">
         <words lang="english">this is the english words section</words>
-        <words lang="maori">this is the maori words section
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        this is just a test</words>
+        <words lang="maori">this is the maori words section</words>
         <origins>this is where the song's origins will be</origins>
     </karakia>
 </resources>
