Changes made: - Status bar colour changed to black - Wintec logo added to loading fragment - Toolbar colour changed to yellow - Wintec logo added to toolbar & gravity code fixed - Added 5 images relating to each karakia in mipmaps - Added Joseph,Jack,Andrew,Rachata,Aadil pics to drawables - Added karakia images to home fragment - Added porfile pics to about us fragment (still needs completion)

--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -7,13 +7,19 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".LoadingActivity">
+    tools:context=".LoadingActivity"
+    android:background="@color/background_yellow">
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/black_logo_large" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is the loading screen" />
+        android:layout_height="wrap_content" />
 
     <ProgressBar
         android:id="@+id/loadingDisplay"
