--- a/app/src/main/res/layout/activity_navhome.xml
+++ b/app/src/main/res/layout/activity_navhome.xml
@@ -23,13 +23,12 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:logoDescription="Wintec">
 
-                        <ImageView
-                            android:id="@+id/imageView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            app:srcCompat="?attr/actionModeCutDrawable"
-                            tools:layout_gravity="right"
-                            tools:layout_marginRight="10dp"/>
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@drawable/black_logo"
+                    android:layout_gravity="right" />
                 </androidx.appcompat.widget.Toolbar>
 
 
@@ -48,6 +47,7 @@
 
                 <!--- TODO: Setup another object that'll sit just behind the infocard that will act as a block to the controls behind the infocard
                 ><!-->
+
             <ImageView
                 android:id="@+id/overlay"
                 android:layout_width="0dp"
@@ -55,8 +55,10 @@
                 android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@mipmap/back_tint" />
 
             <LinearLayout
