--- a/app/src/main/res/xml/karakias.xml
+++ b/app/src/main/res/xml/karakias.xml
@@ -9,7 +9,7 @@ This section is where the song's words would be displayed</words>
 Ko tenei wahanga ka whakaatuhia nga kupu o te waiata</words>
         <origins>This is where you would go to see the songs origins</origins>
     </karakia>
-    <karakia id="1" name="Karakia Timatanga (First Opening)" video="music_1" audio="music_2" image="test_image">
+    <karakia id="1" name="Karakia Timatanga (First Opening)" video="music_1" audio="music_2" image="opening1">
         <words lang="english">Draw forward our learners
 Draw forward our staff
 Draw forward the many people from the
@@ -28,7 +28,7 @@ Taiki e!
         </words>
         <origins>This Karakia is used as an opening prayer for a hui (meeting).</origins>
     </karakia>
-    <karakia id="2" name="Karakia Timatanga (Second Opening)" video="music_1" audio="" image="test_image">
+    <karakia id="2" name="Karakia Timatanga (Second Opening)" video="music_1" audio="" image="opening2">
         <words lang="english">The wind swings to the west
 then turns into a southerly.
 making it prickly cold inland,
@@ -45,7 +45,7 @@ he tio, he huka, he hauhunga.
 Haumi e! Hui e! Taiki e!</words>
         <origins>This Karakia is a more traditionally used Karakia. and is used as an opening for a hui (meeting).</origins>
     </karakia>
-    <karakia id="3" name="Karakia ki te kai (Blessing for food)" video="music_1" audio="" image="test_image">
+    <karakia id="3" name="Karakia ki te kai (Blessing for food)" video="music_1" audio="" image="food">
         <words lang="english">Lord God
 Bless this food
 For the goodness of our bodies
@@ -68,7 +68,7 @@ Amine
 After the 19th century and Christianity was introduced to New Zealand,
 this Karakia was created to acknowledge the Christian god and Jesus Christ.</origins>
     </karakia>
-    <karakia id="4" name="Karakia Whakamutunga (First Closing)" video="music_1" audio="" image="test_image">
+    <karakia id="4" name="Karakia Whakamutunga (First Closing)" video="music_1" audio="" image="closing1">
         <words lang="english">May the grace of the Lord Jesus Christ
 And the love of God and the fellowship
 of the Holy Spirit Be with you all
@@ -87,7 +87,7 @@ Ki te Wairua Tapu
 After the 19th century and Christianity was introduced to New Zealand,
 this Karakia was created to acknowledge the Christian god and Jesus Christ.</origins>
     </karakia>
-    <karakia id="5" name="Karakia Whakamutunga (Second Closing)" video="music_1" audio="" image="test_image">
+    <karakia id="5" name="Karakia Whakamutunga (Second Closing)" video="music_1" audio="" image="closing2">
         <words lang="english">Honour, glory and
 peace to the land.
 May good thoughts come
