--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/loadingRoot"
     android:layout_width="match_parent"
@@ -8,13 +7,13 @@
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".LoadingActivity"
-    android:background="@color/background_yellow">
+    android:background="?attr/colorPrimary">
 
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/black_logo_large" />
+        android:src="@drawable/ic_logo_wintec"/>
 
     <TextView
         android:id="@+id/textView"
