--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.WintecKarakiaApp" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
+        <item name="colorPrimary">#0B2B09</item>
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/teal_200</item>
         <!-- Customize your theme here. -->
