--- a/app/src/main/res/layout/fragment_karakia.xml
+++ b/app/src/main/res/layout/fragment_karakia.xml
@@ -52,7 +52,8 @@
                 android:id="@+id/text_karakiaWords"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="10dp" />
+                android:padding="10dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
         </LinearLayout>
     </ScrollView>
 
