--- a/app/src/main/res/layout/activity_navhome.xml
+++ b/app/src/main/res/layout/activity_navhome.xml
@@ -24,14 +24,16 @@
                     app:logoDescription="Wintec">
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/toolbar_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="right"
+                    android:layout_gravity="end"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
                     app:srcCompat="@drawable/ic_icons_wintec"
                     app:tint="?attr/editTextColor"
-                    tools:layout_editor_absoluteX="311dp"
-                    tools:layout_editor_absoluteY="3dp" />
+                    tools:layout_editor_absoluteX="50dp"
+                    tools:layout_editor_absoluteY="4dp" />
                 </androidx.appcompat.widget.Toolbar>
 
 
