--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -28,6 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:max="100"
-        android:progress="0" />
+        android:progress="0"
+        android:indeterminateTint="?attr/editTextColor"/>
 
 </LinearLayout>
