Changes made: - link to website for additional karakia info added to karakia origin screen.

--- a/app/src/main/res/layout/activity_navhome.xml
+++ b/app/src/main/res/layout/activity_navhome.xml
@@ -96,6 +96,15 @@
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
+
+                        <Button
+                            android:id="@+id/info_link"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/Reference_1"
+                            app:layout_constraintTop_toBottomOf="@id/infocard_text"
+                            app:layout_constraintEnd_toEndOf="parent"/>
+
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </ScrollView>
 
