--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background_yellow">#FFDF00</color>
+    <color name="ic_launcher_background">#FDDC0F</color>
 </resources>
